tests/parser/invalidinput/cycleintypes.idp
vocabulary V {
	type T
	type Z isa T contains T
}

theory T : V {
}

structure S : V {
	T = {a;b}
	Z = {a;b}
}

procedure main(){
	return 1
}
